# renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
cmake/: 3rdparty.cmake  target.cmake
demo/: CMakeLists.txt  main.cpp  raster.hpp  rasterapp.cpp  rasterapp.hpp  simple-buffer.hpp
demo/raster/: clip.cpp  clip.hpp  draw_line.cpp  draw_line.hpp  fragment.hpp  hiez.cpp  hiez.hpp  profile-stat.hpp  raster.cpp  raster.hpp  raster_method.cpp  raster_method.hpp  vertex.hpp
deprecated/geometry/: geometry.hpp  import-via-assimp.cpp  import-via-assimp.hpp
deprecated/opengl/: glad.c  input.hpp  window.hpp
deprecated/resource/: image.cpp  image.hpp  texture.cpp  texture.hpp
docs/: Doxyfile
docs/gpu/: gpu.md.html
docs/html/: _c_make_lists_8txt.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_35781f0e74aa8deac19fa31b37174dc2.html  dir_405fd32de3649961a5f009c7a3fe84df.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ae9a93452e2a84339148a16bcf2eb561.html  display-tev_8hpp.html  display-tev_8hpp_source.html  files.html  geometry_8hpp.html  geometry_8hpp_source.html  image_8hpp.html  image_8hpp_source.html  math_8hpp.html  math_8hpp_source.html  scene_8cpp.html  scene_8hpp.html  scene_8hpp_source.html
docs/html/search/: all_1.js  searchdata.js
src/: CMakeLists.txt  main.cpp
src/CloseGL/docs/: resource.md
src/CloseGL/resource/: vertex_array.hpp
src/accelerator/: octree.cpp  octree.hpp
src/geometry/: AABB.cpp  AABB.h  geometry.hpp  import-via-assimp.cpp  plane.hpp  triangle.cpp  triangle.hpp
src/gl/: application.cpp  application.hpp  gl-context.cpp  gl-context.hpp  gl-enum.hpp  gl-object.cpp  gl-object.hpp  shader.cpp  shader.hpp  state-object.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/math/: AABB.cpp  AABB.h  math-function.hpp  math-header.hpp  transform.cpp  transform.hpp
src/opengl/: CMakeLists.txt  CMakelists.txt  application.cpp  application.hpp  resouce.hpp  window.hpp
src/opengl/util_wrapper/: CMakeLists.txt  helper_utils.cpp  helper_utils.hpp
src/resource/: camera.cpp  camera.hpp  image.hpp  mesh.hpp  model.cpp  model.hpp
src/scene/: camera.cpp  camera.hpp  image.cpp  image.hpp  scene.hpp
src/utils/: CMakeLists.txt  image.hpp  ipcconnect.cpp  ipcconnect.hpp  ipcimpl_linux.inl  ipcimpl_win.inl  logger.hpp  obj_loader.h  shared-queue.hpp  tev-display.cpp  tev-display.hpp
test/: CMakeLists.txt
test/test_3rd/: CMakeLists.txt
test/test_3rd/test_eigen/: CMakeLists.txt
test/test_3rd/test_glfw/: CMakeLists.txt
test/test_3rd/test_glm/: CMakeLists.txt  main.cpp
test/test_3rd/test_json/: CMakeLists.txt
test/test_3rd/test_pugixml/: CMakeLists.txt  main.cpp
test/test_3rd/test_spdlog/: CMakeLists.txt  main.cpp
test/test_3rd/test_stb/: CMakeLists.txt  main.cpp
test/test_3rd/test_tinyexr/: CMakeLists.txt  main.cpp
test/test_feat/: CMakeLists.txt
test/test_feat/opengl/: CMakeLists.txt  main.cpp
test/test_feat/test_tev/: CMakeLists.txt  main.cpp
test/test_feat/test_window/: CMakeLists.txt  main.cpp
